--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   numberpicker: ^2.1.2
   audioplayers: ^4.1.0
+  fluttertoast: ^8.2.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
