--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   audioplayers: ^4.1.0
   fluttertoast: ^8.2.2
   provider: ^6.0.5
+  audio_service: ^0.18.10
+  audio_session: ^0.1.16
 
 dev_dependencies:
   flutter_test:
