--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   numberpicker: ^2.1.2
-  audioplayers: ^4.1.0
   fluttertoast: ^8.2.2
   provider: ^6.0.5
-  audio_service: ^0.18.10
-  audio_session: ^0.1.16
+  just_audio: ^0.9.35
+  circular_countdown_timer: ^0.2.3
 
 dev_dependencies:
   flutter_test:
