novo nome e problema no playAgain

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: training_timer
+name: workout_timers
 description: A new Flutter module project.
 
 # The following defines the version and build number for your application.
